--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <section><h2>hqwdqwdqd</h2></section>
+    <header>
+      <load ="partials/HEADER/header.html" />
+    </header>
+    <main>
+      <load ="partials/MAIN/main.html" />
+    </main>
+    <footer>
+      <load ="partials/FOOTER/footer.html" />
+    </footer>
+
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
